--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "gh-pages": "^4.0.0",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
